refactor: add_blank no link

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <footer>
       <p>
         Desenvolvido por
-        <a href="https://github.com/raygoncalvesss">Rayssa Goncalves</a>
+        <a target="_blank" href="https://github.com/raygoncalvesss">Rayssa Goncalves</a>
       </p>
     </footer>
   </body>
