--- a/index.html
+++ b/index.html
@@ -8,8 +8,15 @@
   </head>
   <body>
     <header>
-      <h2>aula inicial HTML</h2>
-      <p>By Rayssa:)!</p>
+        <div id="profile">
+
+            <img id="profile-image" src="https://github.com/raygoncalvesss.png" alt="rayssa de costa">
+        </div>
+   
+      <div>
+        <h2>aula inicial HTML</h2>
+        <p>By Rayssa:)!</p>
+      </div>
     </header>
 
     <div id="principal">
@@ -20,7 +27,9 @@
     <footer>
       <p>
         Desenvolvido por
-        <a target="_blank" href="https://github.com/raygoncalvesss">Rayssa Goncalves</a>
+        <a target="_blank" href="https://github.com/raygoncalvesss"
+          >Rayssa Goncalves</a
+        >
       </p>
     </footer>
   </body>
